# Goshapps-Wordpad

./: README.md  meson.build
src/: dialogs.c  dialogs.h  main.c  mainwindow.c  mainwindow.h  menus.ui  rtf.c  rtf.h  toolbar.c  toolbar.h
